# MCP-Python

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: backup.json  ollama_example.py  ollama_http.py  rag_example.py  rag_http.py  server.json
httpserver/: multiserver.py  server.py
server/: rag.py  server.py  zabbix.py
src/abstract/: api_response.py  config_container.py  session.py
src/clients/: api.py  lightrag_client.py  lightrag_test.py  ollama_client.py
src/rag_storage/: zabbix.txt
